[FIX] Video overflow

--- a/css/main.css
+++ b/css/main.css
@@ -410,6 +410,7 @@ section #services li span {
 	position:relative;
 	padding-bottom:56.25%;
 	padding-top:30px;
+	border-bottom: 20px;
 	height:0;
 	overflow:hidden;
 }
